# D-E-E-P--Journal

./: README.md  index.html  package-lock.json  package.json  schema.sql  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis.rs  backup.rs  database.rs  integration.rs  lib.rs  main.rs  plugin.rs
src/components/: ErrorBoundary.tsx  Header.tsx  LoadingSpinner.tsx  Sidebar.tsx
src/components/DynamicForm/: DynamicForm.tsx
src/components/DynamicTable/: DynamicTable.tsx
src/contexts/: ThemeContext.tsx  TradeContext.tsx
src/pages/: AddTradePage.tsx  ICTInsightsPage.tsxICTInsightsPage.tsx  PluginManagementPage.tsx  SchemaManagerPage.tsx  SettingsPage.tsx  TradeListPage.tsx
src/pages/DashboardPage/: DashboardPage.tsx
src/types/: ict.ts  metadata.ts  plugin.ts  trade.ts
src/utils/: ictAnalysis.ts  pluginManager.ts  schemaManager.ts
