[package]
name = "meta-driven-trading-journal"
version = "0.1.0"
description = "A meta-driven trading journal for Windows"
authors = ["Your Name"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "1.5", features = ["api-all"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
zip = "0.6"
uuid = { version = "1.0", features = ["v4"] }
image = "0.24"
libloading = "0.8"